# ai-plataform

./: .env.example  .gitignore  CHANGELOG.md  CITATION_INTEGRATION.md  README.md  TODO.md  analise_agent_framework.md  debug_agent.py  lixo.txt  pesquisa.md  pyproject.toml  run.py  run_devui.py  test_integration.py  test_streaming.py  teste.har  validate_examples.py
.amazonq/: mcp.json
.amazonq/agents/: default.json
.github/: copilot-instructions.md
exemplos/: README.md  azure_openai_sequential.json  dag_complex.json  group_chat.json  handoff.json  handoff_complex.json  parallel.json  router.json  router_conditional.json  sequential.json  sequential_human.json
ferramentas/: __init__.py  arquivos.py  basicas.py  code_interpreter.py  rag_tools.py  registry.py  web_search.py
ferramentas_mock/: basicas.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  (+1 more)
mock_tools/: __init__.py  basic.py  seguros.py
prompts/: GUIA_INVESTIGACAO_FRAMEWORK.md  GUIA_INVESTIGACAO_LIMPEZA.md  KNOWLEDGE_BASE_REFERENCES.md  KNOWLEDGE_BASE_RESEARCH.md  LOW_CODE_STUDIO_PROMPT.md  MAIA_STUDIO_PLAN.md  RAG_FRONTEND_IMPLEMENTATION_PLAN.md  RAG_PHASE_1_PLAN.md  REFACTOR_FRONTEND_PLAN.md  agent_studio_evolution.md  worker_analysis_deep_dive.md
test_data/: faq_suporte.md  politicas_rh.txt  produtos.txt  vendas_novembro.csv
tests/: test_group_chat_refactor.py
tools/: __init__.py  builtins.py  factory.py  loader.py  registry.py
worker/: README.md  __init__.py  logging_filters.py  observability.py  runtime.py  runtime_context.py  streaming.py
(+220 files in other folders)
