[project]
name = "ai-platform-generic-worker"
version = "0.0.1"
description = "Configurable generic worker"
requires-python = ">=3.10"
dependencies = [
    "agent-framework>=1.0.0b251114",
    "agent-framework-declarative",
    "agent-framework-devui",
    "pydantic>=2.7",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.3",
    "typer>=0.12.5",
]

[tool.uv.sources]
agent-framework-declarative = { git = "https://github.com/microsoft/agent-framework.git", subdirectory = "python/packages/declarative" }


